clear btn margin on mobile fix

--- a/src/canvas/style.css
+++ b/src/canvas/style.css
@@ -97,7 +97,7 @@ body.theme-canvas {
 
     button,
     .button {
-      margin: 0;
+      margin: 0 !important;
     }
   }
 }
